# metrics_monitor

./: .gitignore  CMakeLists.txt  Doxyfile  INSTALL.md  README.md
.github/actions/documentation/: action.yml
.github/actions/style/: action.yml
include/: expose_metrics.h  metrics.h  sim_alloc.h
lib/memory/: CMakeLists.txt
lib/memory/include/: memory.h
lib/memory/src/: memory.c
src/: expose_metrics.c  main.c  metrics.c  sim_alloc.c
